--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -214,7 +214,7 @@
     })
   </script>
 
-    <!--<script>
+    <script>
         var sidemenu = document.getElementById("sidemenu");
         function openmenu(){
             sidemenu.style.right = "0";
@@ -222,7 +222,7 @@
         function closemenu(){
             sidemenu.style.right = "-200px";
         }
-    </script>-->
+    </script>
 
 </body>
 </html>
